src/styles/globals.css
/* ... */
.footer__input-chevron-wrapper:hover {
  opacity: 0.8;
  transition: var(--btn-transition);
}
.footer__input-chevron {
  color: var(--white);
  font-size: 1rem;
}
.footer__confirm {
  margin-top: 0.5rem;
}

@media screen and (max-width: 1280px) {
  header {
    max-width: 65rem;
    padding: 0 2rem;
  }
  .artist-development-content-wrapper {
    max-width: 60rem;
  }
}

/* 1080 media queries */
@media screen and (max-width: 1080px) {
  header {
    padding: 0;
    width: 100%;
    max-width: 46rem;
  }
  .nav {
    justify-content: flex-end;
  }
  .cta {
    display: none;
  }
  /* Hero  */
  .hero__wrapper {
    flex-direction: row;
    overflow: hidden;
    padding-left: 4rem;
    gap: 4rem;
  }
  .hero__h1 {
    text-align: left;
  }
  .hero__text-wrapper {
    align-items: start;
    padding: 0;
  }
  .hero-img-wrapper {
    width: 40rem;
  }
  .hero__img {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .circle-icon__make-hits {
    top: -4rem;
    left: -5rem;
    right: unset;
  }
  .circle-icon__network,
  .circle-icon__microphone,
  .circle-icon__piano,
  .circle-icon__guitar {
    display: none;
  }
  .listeners-graphic__hero {
    top: -2rem;
    left: unset;
    right: 0;
  }
  .growth-pill__hero {
    left: -3rem;
    right: unset;
    top: unset;
    bottom: 0;
  }

  /* Artist development */
  .artist-development-content-wrapper {
    justify-content: center;
    flex-direction: column;
    align-items: center;
  }
  .artist-dev-text-wrapper {
    justify-content: center;
    align-items: center;
  }
  .artist-dev-icons-wrapper {
    gap: 2rem;
  }
  .artist-dev__header {
    margin-bottom: 2rem;
  }
  .artist-dev__text--spacing-lg {
    margin-bottom: 3rem;
  }
  .statistics {
    display: none;
  }
  .statistics--screen-sm {
    display: block;
    position: relative;
    margin-bottom: 3rem;
  }
}

/* 760 media queries */
@media screen and (max-width: 768px) {
  /* Header */
  header {
    justify-content: center;
    min-height: 80px;
    align-items: center;
  }
  .hamburger {
    display: block;
    position: absolute;
    margin: auto 0;
    left: 2rem;
    cursor: pointer;
  }
  .hamburger-menu {
    width: 60vw;
    background-color: var(--dark-blue);
    height: 100vh;
    z-index: 100;
    left: 0;
    position: fixed;
    box-shadow: 8px 0 24px 0 rgba(21, 65, 132, 0.4);
  }
  .hamburger-menu--visible {
    display: block;
  }
  .hamburger-menu--hidden {
    display: none;
  }
  .hamburger-menu-close-wrapper {
    display: flex;
    justify-content: flex-end;
    padding-right: 2rem;
    padding-top: 2rem;
  }
  .hamburger-menu__close-icon {
    font-size: 1.5rem;
    color: var(--white);
    cursor: pointer;
  }
  .hamburger-menu__close-icon:hover {
    transform: scale(108%);
    opacity: 0.9;
    transition: var(--btn-transition);
  }
  .hamburger-menu__ul {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding-left: 2rem;
  }
  .hamburger-menu__li {
    font-size: 1rem;
    font-weight: 400;
  }
  .hamburger-menu__link {
    color: var(--white);
  }
  .hamburger-menu__link:hover {
    opacity: 0.9;
    transition: var(--btn-transition);
    text-decoration: underline;
  }
  .hamburger-line-wrapper {
    display: flex;
    flex-direction: column;
    gap: 3px;
  }
  .hamburger__line {
    background-color: var(--dark-blue);
    height: 2px;
    width: 20px;
  }
  .hamburger-line-wrapper:hover {
    opacity: 0.7;
    transform: scale(104%);
    transition: var(--btn-transition);
  }
  .logo {
    justify-content: center;
  }
  .nav {
    display: none;
  }

  /* Hero */
  .hero__wrapper {
    flex-direction: column;

    padding: 2rem 0 2rem;
  }
  .hero__text-wrapper {
    align-items: center;
    padding: 0 2rem;
  }
  .hero__h1 {
    text-align: center;
  }
  .hero__h2 {
    text-align: center;
  }
  .hero-img-wrapper {
    max-width: 80vw;
  }
  .hero__img {
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 1rem;
  }
  .hero__btn-wrapper {
    flex-direction: column;
    gap: 1rem;
    width: 100%;
  }
  .btn-large {
    width: 100%;
  }
  /* Hero icons */
  .circle-icon__make-hits {
    display: none;
  }
  .growth-pill__hero {
    left: -1rem;
    bottom: -1rem;
  }

  /* About */
  .about-text-wrapper {
    padding: 7.5rem 2rem 4rem;
  }
  .about__h2 {
    text-align: center;
  }

  .about__icons-wrapper {
    gap: 1rem;
    flex-direction: column;
  }
  .about__label-wrapper {
    gap: 3rem;
    padding-bottom: 4rem;
  }

  /* Artist development */
  .artist-dev-text-wrapper {
    align-items: center;
  }
  .artist-development {
    min-height: 1000px;
  }
  .artist-dev-icons-wrapper {
    gap: 1rem;
    flex-direction: column;
    width: 100%;
    margin-bottom: 3rem;
  }
  .statistics--screen-sm {
    order: 3;
  }
}

@media screen and (max-width: 576px) {
  /* About */

  .about-text-wrapper {
    align-items: start;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
  .about__h2 {
    margin-bottom: 2rem;
    text-align: left;
  }
  .about__h3 {
    margin-bottom: 1rem;
  }
  .about__label-h3 {
    margin-bottom: 1.5rem;
    text-align: center;
  }
  .about__h4 {
    text-align: left;
    margin-bottom: 2rem;
  }
  .about-label-wrapper {
    padding-left: 1.5rem;

    padding-right: 1.5rem;
  }
  .about__label-wrapper {
    justify-content: center;
    width: 100%;
    column-gap: 1rem;
    row-gap: 1rem;
    display: grid;
    grid-template-columns: repeat(3, 4rem);
  }

  /* Artist development */
  .artist-dev-text-wrapper {
    width: 100%;
  }
  .artist-dev-text-wrapper {
    padding: 0 1.5rem;
  }
  .statistics--screen-sm {
    max-width: 25rem;
  }
}

